# shunit

./: Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs
src/tst/: main.rs
test/: JUnit.xml  bad_apple.sh  im_ok.sh  slow.sh
tests/: integration_test.rs
