[[bin]]
name = 'shunit'
path = 'src/main.rs'

[package]
default-run = 'shunit'
edition     = '2021'
name        = 'shunit'
version     = '0.1.0'

[dependencies]
anyhow         = '^1.0'
chrono         = '^0.4'
log            = '^0.4'
stderrlog      = '^0.5'
structopt      = '^0.3'
tokio          = { version = "^1.0", features = ['full'] }
tokio-stream   = '0.1'
yaserde        = '^0.8'
yaserde_derive = '^0.8'

[dev-dependencies]
assert_cmd = '^2.0'

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'
strip         = true
