[package]
default-run = "shunit"
edition = "2021"
name = "shunit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
log = "^0.4"
stderrlog = "^0.5"
structopt = "^0.3"
yaserde = "^0.8"
yaserde_derive = "^0.8"
nonblock="^0.1"

[dev-dependencies]
assert_cmd = "^2.0"

##  7248440 cargo +nightly build -Z build-std=std,panic_abort --target x86_64-unknown-linux-gnu --release
[profile.release] # Profile optimizes for binary size
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[[bin]]
name = "shunit"
path = "src/main.rs"

