[[bin]]
name = "shunit"
path = "src/main.rs"

[package]
categories   = ["command-line-utilities", "development-tools::testing"]
default-run  = "shunit"
description  = "Utility that runs a list of shell scripts and outputs the results in JUnit format for easy use in CI/CD systems."
edition      = "2021"
include      = ["src/**/*.rs", "Cargo.toml"]
license-file = "LICENSE"
name         = "shunit"
readme       = "README.md"
repository   = "https://github.com/SwissArmyRonin/shunit"
version      = "0.1.1"


[dependencies]
anyhow         = "^1.0"
chrono         = "^0.4"
log            = "^0.4"
stderrlog      = "^0.5"
structopt      = "^0.3"
tokio          = { version = "^1.0", features = ["full"] }
tokio-stream   = "0.1"
yaserde        = "^0.8"
yaserde_derive = "^0.8"

[dev-dependencies]
assert_cmd = "^2.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "z"
panic         = "abort"
strip         = true
